--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ java {
 }
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
@@ -24,10 +25,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
-	implementation 'com.microsoft.gctoolkit:gctoolkit-api:3.0.4'
-	implementation 'com.microsoft.gctoolkit:gctoolkit-parser:3.0.4'
-	implementation 'com.microsoft.gctoolkit:gctoolkit-sample:3.0.4'
-	implementation 'com.microsoft.gctoolkit:gctoolkit:3.0.4'
+	implementation 'com.microsoft.gctoolkit:gctoolkit-api:3.0.5.1-SNAPSHOT'
+	implementation 'com.microsoft.gctoolkit:gctoolkit-parser:3.0.5.1-SNAPSHOT'
+	implementation 'com.microsoft.gctoolkit:gctoolkit-sample:3.0.5.1-SNAPSHOT'
+	implementation 'com.microsoft.gctoolkit:gctoolkit:3.0.5.1-SNAPSHOT'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.jetbrains.kotlinx:dataframe:0.11.0'
 }
